@@ -1,3 +1,8 @@
+2005-08-08 17:18 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridmetric.c (gridFaceAreaUVDirect) direct way of getting
+	face area in uv space, gridFaceAreaUV calls it.
+
 2005-08-08 11:16 Mike Park  <mike.park@nasa.gov>
 
 	* src/ring.c (ringSegmentsContainNode) return node uv if it is in
